[package]
name = "bayestest"
version = "0.1.1"
description = "Bayesian A/B testing calculations for Rust"
repository = "https://github.com/ankane/bayestest-rust"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
readme = "README.md"

[lib]
doctest = false

[dependencies]
