[package]
name = "bayestest"
version = "0.2.0"
description = "Bayesian A/B testing calculations for Rust"
repository = "https://github.com/ankane/bayestest-rust"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.66.0"
readme = "README.md"

[lib]
doctest = false

[dependencies]
